--- a/blog/Views/BlogEntry/index.cshtml
+++ b/blog/Views/BlogEntry/index.cshtml
@@ -1,5 +1,34 @@
-﻿@{
-    ViewBag.Title = "index";
+﻿@model IEnumerable<blog.Models.Entities.Entry>
+
+@{
+    ViewBag.Title = "Index";
 }
 
-<h2>index</h2>
+<h2>Index</h2>
+
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table>
+     <tr>
+        <th></th>
+        <th>Title</th>
+        <th>CreatedOn </th>
+    </tr>
+    @foreach (var item in Model)
+    { 
+        <tr>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.EntryId }) |
+                @Html.ActionLink("Details", "Details", new { id = item.EntryId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.EntryId })
+            </td>
+            <td>
+                @item.Title
+            </td>
+            <td>
+                @String.Format("{0:g}", item.CreatedOn)
+            </td>
+        </tr>
+    }
+</table>
