--- a/blog/Views/BlogEntry/_CreateOrEdit.cshtml
+++ b/blog/Views/BlogEntry/_CreateOrEdit.cshtml
@@ -1,7 +1,8 @@
 ﻿@model blog.Models.Entities.Entry
 
-@Html.HiddenFor(model => model.EntryId)
-
+<div class="editor-label">
+    @Html.LabelFor(model => model.Title)
+</div>
 <div class="editor-field">
     @Html.EditorFor(model => model.Title)
     @Html.ValidationMessageFor(model => model.Title)
